--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,11 @@
     padding: 0;
   }
 
+header{
+    background-color: aqua;
+    text-align: center;
+    font-size: 30px;
+}
 .container{
     position: relative;
     margin: auto;
