--- a/css/style.css
+++ b/css/style.css
@@ -11,16 +11,25 @@ header{
     text-align: center;
     font-size: 30px;
     padding: 20px 0;
+    height: 10vh;
+}
+span{
+    border: 1px solid black;
+    padding: 5px;
+
 }
 .links{
-    margin-top: 10px;
+    margin-top: 15px;
     display: flex;
     justify-content: space-around;       
 }
 .links li{
     font-size: 18px;
     background-color: snow;   
-    padding: 10px;    
+    padding: 10px;
+    box-shadow: 12px 10px 17px 0px rgba(59,99,128,0.75);
+    -webkit-box-shadow: 12px 10px 17px 0px rgba(59,99,128,0.75);
+    -moz-box-shadow: 12px 10px 17px 0px rgba(59,99,128,0.75);
 }
 .links li a{
     text-decoration: none;
@@ -37,13 +46,15 @@ header{
 }
 
 .container{
-    position: relative;
-    margin: auto;
-    margin-top: 20px;
+    position: absolute;
     width: 60vw;
     padding: 20px;
     border: 1px solid black;
     border-radius: 10px;
+    box-shadow: 12px 10px 17px 0px rgba(59,99,128,0.75);
+    -webkit-box-shadow: 12px 10px 17px 0px rgba(59,99,128,0.75);
+    -moz-box-shadow: 12px 10px 17px 0px rgba(59,99,128,0.75);
+    
 }
 .container h1{
     text-align: center;
